--- a/webshop_project-main_wp-backend/docker-compose.yml
+++ b/webshop_project-main_wp-backend/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - db
 
   db:
-    image: mysql:5.7
+    image: mariadb:11.4
     environment:
       MYSQL_DATABASE: wpdatabase
       MYSQL_USER: wpuser
